--- a/src/Atom.ServiceDiscovery.Abstractions/project.json
+++ b/src/Atom.ServiceDiscovery.Abstractions/project.json
@@ -11,6 +11,7 @@
     "Microsoft.AspNetCore.Http.Abstractions": "1.0.0",
     "Microsoft.Extensions.Configuration": "1.0.0",
          "Microsoft.Extensions.DependencyInjection.Abstractions": "1.0.0",
+         "Microsoft.AspNetCore.Hosting.Abstractions":"1.0.0",
 
     "Atom.Common":  {
       "version" : "1.0.0",
