--- a/src/Atom.CircuitBreaker/project.json
+++ b/src/Atom.CircuitBreaker/project.json
@@ -1,6 +1,5 @@
 {
   "version": "1.0.0-*",
-
   "dependencies": {
     "Microsoft.NETCore.App": {
       "version": "1.0.0",
@@ -10,16 +9,15 @@
     "Microsoft.AspNetCore.Http.Abstractions": "1.0.0",
     "Microsoft.AspNetCore.Hosting.Abstractions": "1.0.0",
     "Microsoft.Extensions.Options.ConfigurationExtensions": "1.0.0",
+    "Microsoft.Extensions.Configuration": "1.0.0",
     "Atom.Common": {
       "version": "1.0.0",
       "Target": "Project"
-    },
+    }
   },
-
   "frameworks": {
     "netcoreapp1.0": {}
   },
-
   "tooling": {
     "defaultNamespace": "Atom.Common"
   },
